--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pixi/filter-glow": "^5.2.1",
     "gsap": "^3.13.0",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "pixi-filters": "^6.1.4",
     "pixi.js": "^8.14.0",
     "vue": "^3.5.22"
