--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pixi/filter-blur": "^7.4.3",
     "@pixi/filter-glow": "^5.2.1",
     "gsap": "^3.13.0",
+    "howler": "^2.2.4",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "pixi-filters": "^6.1.4",
