--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia-plugin-persistedstate": "^4.7.1",
     "pixi-filters": "^6.1.4",
     "pixi.js": "^8.14.0",
+    "vconsole": "^3.15.1",
     "vue": "^3.5.22"
   },
   "devDependencies": {
